<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
<string name="app_name">Synodroid</string>
<string name="app_opensource">Opensource project</string>
<string name="app_url">http://code.google.com/p/synodroid-ds/</string>
<string name="connect_cant_connect">"Can't connect to {0}. Error is '{1}'."</string>
<string name="unknow_reason">&quot;An error occured for an unknown reason&quot;</string>
<string name="connect_wrong_userpassword">"Wrong user or password. Please try again."</string>
<string name="connect_already_connected">"You're connected to another computer. Please reconnect."</string>
<string name="connect_nohost">&quot;Can't contact host. Please verify your settings.&quot;</string>
<string name="connect_error_title">"Error"</string>
<string name="connect_connecting2">"Connecting. Please wait..."</string>
<string name="connect_connecting">"Connecting to \n{0}\nPlease wait..."</string>
<string name="connect_ssl_error">"SSL error: {0}"</string>
<string name="action_deleting">&quot;Removing file %s&quot;</string>
<string name="action_clearall">&quot;Clearing all completed tasks...&quot;</string>
<string name="action_pausing">&quot;Pausing file %s&quot;</string>
<string name="action_resuming">&quot;Resuming file %s&quot;</string>
<string name="action_pauseall">&quot;Pausing all running tasks...&quot;</string>
<string name="action_resumeall">&quot;Resuming all paused tasks...&quot;</string>
<string name="menu_connect">Connect to</string>
<string name="menu_search">Search</string>
<string name="menu_clearall">Clear completed tasks</string>
<string name="menu_pauseall">Pause all</string>
<string name="menu_resumeall">Resume all</string>
<string name="dialog_title_action">Action</string>
<string name="menu_parameter">Settings</string>
<string name="err_unknown">Unknown error!</string>
<string name="connect_cant">&quot;You are not allowed to use this service&quot;</string>
<string name="label_nickname">Nickname</string>
<string name="label_protocol">Protocol</string>
<string name="label_host">Host</string>
<string name="label_port">Port</string>
<string name="label_username">Username</string>
<string name="label_password">Password</string>
<string name="label_refreshinterval">Interval</string>
<string name="hint_nickname">Set the nickname</string>
<string name="hint_protocol">Set the protocol to use</string>
<string name="hint_host">Set the hostname or IP</string>
<string name="hint_port">Set the port</string>
<string name="hint_username">The username</string>
<string name="hint_password">The password</string>
<string name="hint_refreshinterval">Refresh interval in second</string>
<string-array name="protocols_array"><item>HTTP</item>
<item>HTTPS</item>
</string-array>
<string name="button_cancel">Cancel</string>
<string name="label_dsm_version">Disk Station Manager</string>
<string name="hint_dsm_version">&quot;Set your DSM's version&quot;</string>
<string name="title_preference">Settings</string>
<string name="label_autorefresh">Auto refresh</string>
<string name="hint_autorefresh_on">Auto resfresh is enabled</string>
<string name="hint_autorefresh_off">Auto refresh is disabled</string>
<string name="title_cat_servers">Servers</string>
<string name="title_cat_general">General Options</string>
<string name="menu_delete_server">Delete server(s)</string>
<string-array name="sorts_array"><item>By date created</item>
<item>By user</item>
</string-array>
<string name="label_process_sort">Sort tasks</string>
<string name="hint_process_sort">Select how to sort tasks</string>
<string-array name="sort_array_values"><item>date</item>
<item>user</item>
</string-array>
<string name="button_delete">Delete</string>
<string name="menu_add_server">Add a server</string>
<string name="label_default_server_prefix">Server </string>
<string name="hint_default_server">Invalid server, click to edit</string>
<string name="menu_refresh">Refresh</string>
<string name="title_cat_connection">Public connection settings</string>
<string name="title_cat_connection_local">Local connection settings</string>
<string name="title_cat_server">General Settings</string>
<string name="action_resume">Resume</string>
<string name="action_pause">Pause</string>
<string name="action_clear">Clear</string>
<string name="action_cancel">Cancel</string>
<string name="action_retry">Retry</string>
<string name="action_delete">Delete</string>
<string name="action_details">Show details...</string>
<string name="dialog_title_confirm">Confirm</string>
<string name="button_yes">Yes</string>
<string name="button_no">No</string>
<string name="label_sort_taskid">By creation date</string>
<string name="label_sort_filename">By filename</string>
<string name="label_sort_totalsize">By total size</string>
<string name="label_sort_currentsize">By current size</string>
<string name="label_sort_progress">By progress</string>
<string name="label_sort_uploadrate">By upload rate</string>
<string name="label_sort_currentrate">By download rate</string>
<string name="label_sort_timeleft">By time left</string>
<string name="label_sort_status">By status</string>
<string name="label_sort_username">By username</string>
<string name="label_asc_sort">Ascending sort</string>
<string name="hint_asc_sort_on">The sort is ascending</string>
<string name="hint_asc_sort_off">The sort is descending</string>
<string name="eula_hide">Hide</string>
<string name="action_detailing">Retrieving details of \'%s\'</string>
<string name="action_adding">Adding file %s</string>
<string name="detail_tab_general">General</string>
<string name="detail_tab_transfer">Transfer</string>
<string name="detail_tab_files">Files</string>
<string name="detail_filesize">File size</string>
<string name="detail_username">User name</string>
<string name="detail_filename">File name</string>
<string name="detail_destination">Destination</string>
<string name="detail_creationtime">Creation time</string>
<string name="detail_url">Url</string>
<string name="detail_originaltorrent">Original torrent</string>
<string name="detail_status">Status</string>
<string name="detail_transfered">Transfered</string>
<string name="detail_speed">Speed</string>
<string name="detail_peers">Peers (connected / total)</string>
<string name="detail_seeders_leechers">Seeders - Leechers</string>
<string name="detail_eta">Estimated time arrival</string>
<string name="detail_pieces">Pieces (current / total)</string>
<string name="detail_progress">Progress</string>
<string name="detail_status_waiting">Waiting</string>
<string name="detail_status_downloading">Downloading</string>
<string name="detail_status_seeding">Seeding</string>
<string name="detail_status_paused">Paused</string>
<string name="detail_status_finished">Finished</string>
<string name="detail_status_hash_checking">Hash checking</string>
<string name="detail_status_error">Error</string>
<string name="menu_about">About</string>
<string name="app_contributors">&quot;Project's contributors:&quot;</string>
<string name="app_status_project">Check the status of our project:</string>
<string name="button_ok">OK</string>
<string name="eula_view">Licence</string>
<string name="button_yesplease">Yes please</string>
<string name="button_nothanks">No thanks</string>
<string name="dialog_title_information">Information</string>
<string name="no_server_configured">No server has been configured or no server is appropriate for the current connection.\n\nWould you like to configure the system now ?</string>
<string name="detail_progress_upload">Upload:</string>
<string name="detail_progress_download">Download:</string>
<string name="detail_finished">Finished</string>
<string name="detail_unvailable">unvailable</string>
<string name="not_yet_implemented">Feature not yet implemented</string>
<string name="title_information">Information</string>
<string name="detail_unknown">Unknown</string>
<string name="action_files">Retrieving files of \'%s\'</string>
<string name="action_updating">&quot;Updating file %s&quot;</string>
<string name="seeding_time">Seeding time</string>
<string name="seeding_ratio">Seeding ratio (%)</string>
<string name="seeding_parameters_time">Seeding settings</string>
<string-array name="seeding_time_array">
<item>Ignore</item>
<item>90 mins</item>
<item>2 hours</item>
<item>3 hours</item>
<item>4 hours</item>
<item>5 hours</item>
<item>6 hours</item>
<item>7 hours</item>
<item>8 hours</item>
<item>9 hours</item>
<item>10 hours</item>
<item>12 hours</item>
<item>16 hours</item>
<item>20 hours</item>
<item>24 hours</item>
<item>30 hours</item>
<item>36 hours</item>
<item>48 hours</item>
<item>60 hours</item>
<item>72 hours</item>
<item>96 hours</item>
<item>Forever</item>
</string-array>
<string name="logo_download">Torrent, NZB, Url</string>
<string name="logo_emule">eMule (not implemented)</string>
<string name="logo_about">About</string>
<string-array name="seeding_time_array_values">
<item>0</item>
<item>90</item>
<item>120</item>
<item>180</item>
<item>240</item>
<item>300</item>
<item>360</item>
<item>420</item>
<item>480</item>
<item>540</item>
<item>600</item>
<item>720</item>
<item>960</item>
<item>1200</item>
<item>1440</item>
<item>1800</item>
<item>2160</item>
<item>2880</item>
<item>3600</item>
<item>4320</item>
<item>5760</item>
<item>-1</item>
</string-array>
<string name="detail_forever">Forever</string>
<string name="action_enum_shared">Retrieving shared directories</string>
<string name="shared_dir_title">Select a shared directory</string>
<string name="shared_note">Note: this parameter will affect all non finished downloads.</string>
<string name="action_set_shared">Setting shared directory</string>
<string name="menu_destination">Destination</string>
<string name="action_download_original_file">Downloading original file</string>
<string name="action_download_original_saved">File has been saved to your external storage (/sdcard/download)</string>
<string name="action_download_original_failed">Unable to save file, likeky because external storage is not mounted</string>
<string name="translator">&quot;Translators:&quot;</string>
<string name="fullscreen_preference">Full screen</string>
<string name="summary_fullscreen_preference">Hides the notification bar</string>
<string name="crash_notif_ticker_text">Unexpected error, please send a report...</string>
<string name="crash_notif_title">Synodroid has crashed...</string>
<string name="crash_notif_text">Please click here to help fix the issue.</string>
<string name="crash_dialog_title">Synodroid has crashed</string>
<string name="crash_dialog_text">An unexpected error occurred forcing the
        application to stop. Please help us fix this by sending us error data,
        all you have to do is click \'OK\'.</string>
<string name="crash_dialog_comment_prompt">You might add your email address and your comments about the problem below:</string>
<string name="crash_dialog_ok_toast">Thank you !</string>
<string name="label_showupload">Upload progress</string>
<string name="hint_showupload_on">Upload progress is shown</string>
<string name="hint_showupload_off">Upload progress is not shown</string>
<string name="hint_wlan_on">This connection is used only in WIFI</string>
<string name="hint_wlan_off">This connection is not used in WIFI</string>
<string name="label_wifissid">WIFI network</string>
<string name="hint_wifissid">Select the WIFI network to use</string>
<string name="title_wifi_disabled">Wifi is disabled</string>
<string name="message_wifi_disabled">Please enable Wifi before trying to configure the connection</string>
<string name="wizard_menu">Find server</string>
<string name="wizard_searching_title">Searching</string>
<string name="email">Get support by email!</string>
<string name="app_pro">Free version</string>
<string name="gplus">Get support on Google+</string>
<string name="syno_pro_banner_text">Get new features with Synodroid Pro. Press to get it!</string>
</resources>